crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__alert_configs__test__query_effective_denied.snap
---
source: crates/control-plane-api/src/server/public/graphql/alert_configs.rs
assertion_line: 729
expression: response
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 25,
          "line": 3
        }
      ],
      "message": "PermissionDenied: alice@example.test is not authorized to access prefix or name 'notAliceCo/' with required capability CatalogRead",
      "path": [
        "effectiveAlertConfig"
      ]
    }
  ]
}
