crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__alert_configs__test__query_effective_inherited_override.snap
---
source: crates/control-plane-api/src/server/public/graphql/alert_configs.rs
expression: response
---
{
  "data": {
    "effectiveAlertConfig": {
      "config": {
        "shardFailed": {
          "condition": {
            "failures": 5,
            "per": "8h"
          },
          "enabled": true
        }
      },
      "provenance": [
        {
          "path": "shardFailed.condition.failures",
          "source": "aliceCo/"
        },
        {
          "path": "shardFailed.condition.per",
          "source": null
        },
        {
          "path": "shardFailed.enabled",
          "source": null
        }
      ]
    }
  }
}
